--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "dependencies": {
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-scripts": "2.1.5"
+    "react-redux": "^6.0.1",
+    "react-scripts": "2.1.5",
+    "reactotron-react-js": "^3.0.1",
+    "reactotron-redux": "^3.1.0",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,4 +27,3 @@
     "not op_mini all"
   ]
 }
-
